--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -66,7 +66,8 @@ felix.auto.start.40= \
  reference:file:sc-bundles/defaultresources.jar
 
 felix.auto.start.45= \
-reference:file:sc-bundles/version.jar \
+reference:file:sc-bundles/ui-service.jar \
+ reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/branding.jar
 
