--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -53,55 +53,56 @@ felix.auto.start.2= \
  reference:file:lib/bundle/log4j.jar
 
 felix.auto.start.3= \
- file:sc-bundles/fileaccess.jar
+ reference:file:sc-bundles/fileaccess.jar
 
 felix.auto.start.4= \
- file:sc-bundles/configuration.jar \
+ reference:file:sc-bundles/configuration.jar \
+ reference:file:sc-bundles/ui-service.jar \
  reference:file:sc-bundles/resourcemanager.jar \
  reference:file:sc-bundles/defaultresources.jar \
  reference:file:sc-bundles/jfontchooserlib.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
- file:sc-bundles/netaddr.jar
+ reference:file:sc-bundles/netaddr.jar
 
 felix.auto.start.5= \
- file:sc-bundles/protocol.jar \
- file:sc-bundles/contactlist.jar \
- file:sc-bundles/history.jar \
- file:sc-bundles/protocol-icq.jar \
- file:sc-bundles/smacklib.jar \
- file:sc-bundles/protocol-rss.jar \
- file:sc-bundles/protocol-jabber.jar \
- file:sc-bundles/protocol-msn.jar \
- file:sc-bundles/protocol-sip.jar \
- file:sc-bundles/protocol-yahoo.jar \
- file:sc-bundles/protocol-gibberish.jar \
- file:sc-bundles/media.jar \
- file:sc-bundles/meta-cl.jar \
- file:sc-bundles/msghistory.jar \
- file:sc-bundles/callhistory.jar
+ reference:file:sc-bundles/protocol.jar \
+ reference:file:sc-bundles/contactlist.jar \
+ reference:file:sc-bundles/history.jar \
+ reference:file:sc-bundles/protocol-icq.jar \
+ reference:file:sc-bundles/smacklib.jar \
+ reference:file:sc-bundles/protocol-rss.jar \
+ reference:file:sc-bundles/protocol-jabber.jar \
+ reference:file:sc-bundles/protocol-msn.jar \
+ reference:file:sc-bundles/protocol-sip.jar \
+ reference:file:sc-bundles/protocol-yahoo.jar \
+ reference:file:sc-bundles/protocol-gibberish.jar \
+ reference:file:sc-bundles/media.jar \
+ reference:file:sc-bundles/meta-cl.jar \
+ reference:file:sc-bundles/msghistory.jar \
+ reference:file:sc-bundles/callhistory.jar
 
 felix.auto.start.6= \
- file:sc-bundles/slickless.jar \
- file:sc-bundles/configuration-slick.jar \
- file:sc-bundles/protocol.jar \
- file:sc-bundles/protocol-mock.jar \
- file:sc-bundles/media-slick.jar \
- file:sc-bundles/netaddr-slick.jar \
- file:sc-bundles/fileaccess-slick.jar \
- file:sc-bundles/history-slick.jar \
- file:sc-bundles/meta-cl-slick.jar \
- file:sc-bundles/protocol-sip-slick.jar \
- file:sc-bundles/protocol-jabber-slick.jar \
- file:sc-bundles/protocol-msn-slick.jar \
- file:sc-bundles/protocol-yahoo-slick.jar \
- file:sc-bundles/protocol-gibberish-slick.jar \
- file:sc-bundles/protocol-rss-slick.jar \
- file:sc-bundles/msghistory-slick.jar \
- file:sc-bundles/callhistory-slick.jar
+ reference:file:sc-bundles/slickless.jar \
+ reference:file:sc-bundles/configuration-slick.jar \
+ reference:file:sc-bundles/protocol.jar \
+ reference:file:sc-bundles/protocol-mock.jar \
+ reference:file:sc-bundles/media-slick.jar \
+ reference:file:sc-bundles/netaddr-slick.jar \
+ reference:file:sc-bundles/fileaccess-slick.jar \
+ reference:file:sc-bundles/history-slick.jar \
+ reference:file:sc-bundles/meta-cl-slick.jar \
+ reference:file:sc-bundles/protocol-sip-slick.jar \
+ reference:file:sc-bundles/protocol-jabber-slick.jar \
+ reference:file:sc-bundles/protocol-msn-slick.jar \
+ reference:file:sc-bundles/protocol-yahoo-slick.jar \
+ reference:file:sc-bundles/protocol-gibberish-slick.jar \
+ reference:file:sc-bundles/protocol-rss-slick.jar \
+ reference:file:sc-bundles/msghistory-slick.jar \
+ reference:file:sc-bundles/callhistory-slick.jar
 
 felix.auto.start.100= \
- file:sc-bundles/slick-runner.jar
+ reference:file:sc-bundles/slick-runner.jar
 
 #Specify the directory where oscar should deploy its bundles
 felix.cache.profiledir=sip-communicator.utest.bin
