--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -139,7 +139,7 @@ felix.auto.start.60= \
 
 #Specify the directory where oscar should deploy its bundles
 #felix.cache.profiledir=sip-communicator.bin
-felix.cache.profiledir=${user.home}/.sip-communicator/sip-communicator.bin
+felix.cache.profiledir=${net.java.sip.communicator.SC_HOME_DIR_LOCATION}/${net.java.sip.communicator.SC_HOME_DIR_NAME}/sip-communicator.bin
 
 felix.startlevel.framework=100
 felix.startlevel.bundle=100
