Switched WARN for WARNING levels.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4049 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -27,7 +27,7 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= WARN
+.level= WARNING
 
 ############################################################
 # Handler specific properties.
@@ -75,8 +75,8 @@ net.java.sip.communicator.service.configuration.level = INFO
 net.java.sip.communicator.impl.configuration.level = INFO
 net.java.sip.communicator.impl.history.level = INFO
 net.java.sip.communicator.impl.gui.level = INFO
-net.java.sip.communicator.impl.protocol.zeroconf.jmdns.level = WARN
-net.java.sip.communicator.impl.media.level = WARN
+net.java.sip.communicator.impl.protocol.zeroconf.jmdns.level = WARNING
+net.java.sip.communicator.impl.media.level = WARNING
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
