--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -58,6 +58,7 @@ TEXT_ITALIC_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textItalicRollover
 TEXT_UNDERLINED_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textUnderlinedRollover.png
 DIAL_BUTTON=resources/images/impl/gui/buttons/dialButton.png
 HOLD_BUTTON=resources/images/impl/gui/buttons/holdButton.png
+MUTE_BUTTON=resources/images/impl/gui/buttons/muteButton.png
 INVITE_DIALOG_ICON=resources/images/impl/gui/common/inviteDialogIcon.png
 SEND_SMS_ICON=resources/images/impl/gui/common/gsm.png
 DIAL_BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
