--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -29,6 +29,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.sound.sampled; \
  javax.naming; \
  javax.naming.directory; \
+ javax.crypto.spec; \
  javax.net; \
  javax.net.ssl;
 
