Removing make dependency in DMG and DEB packages as they may have been already built (which is the case on our CC system) so there's no need to add the extra time.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4200 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -329,7 +329,7 @@
     </target>
 
     <!-- - - - - - - - - - - BUILDING RELEASE PACKAGES - - - - - - - - - - - -->
-    <target name="macosx" depends="make"
+    <target name="macosx"
             description="Create an .app package for MACOSX">
 
       <taskdef name="jarbundler"
@@ -577,7 +577,7 @@
     </target>
 
     <!-- Create a Debian package - This needs dpkg utilities -->
-    <target name="deb" depends="make,dpkg-build-warning"
+    <target name="deb" depends="dpkg-build-warning"
             if="dpkg.build.present"
             description="Create a .deb package for Debian (needs dpkg utilities)">
 
