--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -62,7 +62,9 @@ felix.auto.start.30= \
 felix.auto.start.40= \
  reference:file:sc-bundles/configuration.jar \
  reference:file:sc-bundles/resourcemanager.jar \
- reference:file:sc-bundles/jfontchooserlib.jar \
+ reference:file:sc-bundles/jfontchooserlib.jar
+
+felix.auto.start.42= \
  reference:file:sc-bundles/defaultresources.jar
 
 felix.auto.start.45= \
