Switching use of 7zr to 7z for the windows installers
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4225 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -65,7 +65,7 @@
     <condition property="7zip.executable" value="7z">
         <os family="windows"/>
     </condition>
-    <condition property="7zip.executable" value="7zr">
+    <condition property="7zip.executable" value="7z">
         <equals arg1="${os.name}" arg2="linux"
                 casesensitive="false" trim="true"/>
     </condition>
