Do not include svg-s in the default resource pack
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4232 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -287,6 +287,7 @@
            <fileset dir="${sc.basedir}/resources">
                 <include name="**/*"/>
                 <exclude name="**/languages/**"/>
+                <exclude name="**/*.svg"/>
            </fileset>
         </copy>
     </target>
