Make sure that the simplified wizard loads after the other wizards as it is using them
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4236 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -101,12 +101,12 @@ felix.auto.start.60= \
  reference:file:sc-bundles/keybindings.jar \
  reference:file:sc-bundles/notification.jar
 
- felix.auto.start.66= \
+felix.auto.start.66= \
  reference:file:sc-bundles/swing-ui.jar \
  reference:file:sc-bundles/updatechecker.jar \
  reference:file:sc-bundles/systray.jar
 
- felix.auto.start.67= \
+felix.auto.start.67= \
  reference:file:sc-bundles/pluginmanager.jar \
  reference:file:sc-bundles/whiteboard.jar \
  reference:file:sc-bundles/icqaccregwizz.jar \
@@ -122,7 +122,6 @@ felix.auto.start.60= \
  reference:file:sc-bundles/rssaccregwizz.jar \
  reference:file:sc-bundles/zeroconfaccregwizz.jar \
  reference:file:sc-bundles/ircaccregwizz.jar \
- reference:file:sc-bundles/simpleaccreg.jar \
  reference:file:sc-bundles/contacteventhandler.jar \
  reference:file:sc-bundles/notificationconfig.jar \
  reference:file:sc-bundles/contactinfo.jar \
@@ -133,7 +132,10 @@ felix.auto.start.60= \
  reference:file:sc-bundles/keybindingChooser.jar \
  reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar
- 
+
+felix.auto.start.70= \
+ reference:file:sc-bundles/simpleaccreg.jar 
+
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
 #oscar.auto.start.100= \
