Make sure the meta contact list is loaded after all protocols
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4237 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -90,8 +90,11 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-rss.jar \
  reference:file:sc-bundles/protocol-zeroconf.jar \
  reference:file:sc-bundles/protocol-irc.jar \
- reference:file:sc-bundles/meta-cl.jar \
  reference:file:sc-bundles/protocol-dict.jar
+
+felix.auto.start.55= \
+ reference:file:sc-bundles/meta-cl.jar 
+ 
 
 felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
