New custom FileHandler for the logger, now creates the log directory if missing and sets the log files to the proper location.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4313 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/logging.properties
+++ b/resources/install/logging.properties
@@ -15,7 +15,7 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the INFO and above levels.
-handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+handlers= net.java.sip.communicator.launcher.logging.FileHandler, java.util.logging.ConsoleHandler
 
 
 # To also add the FileHandler, use the following line instead.
@@ -35,11 +35,10 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 ############################################################
 
 # default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = %h/.sip-communicator/log/sip-communicator%u.log
-java.util.logging.FileHandler.limit = 5000000
-java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
-java.util.logging.FileHandler.level = FINEST
+net.java.sip.communicator.launcher.logging.FileHandler.limit = 5000000
+net.java.sip.communicator.launcher.logging.FileHandler.count = 3
+net.java.sip.communicator.launcher.logging.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
+net.java.sip.communicator.launcher.logging.FileHandler.level = FINEST
 
 
 
