Move custom FileHandler to util package and add util classes to system classloader under windows.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4316 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/logging.properties
+++ b/resources/install/logging.properties
@@ -15,7 +15,7 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the INFO and above levels.
-handlers= net.java.sip.communicator.launcher.logging.FileHandler, java.util.logging.ConsoleHandler
+handlers= net.java.sip.communicator.util.FileHandler, java.util.logging.ConsoleHandler
 
 
 # To also add the FileHandler, use the following line instead.
@@ -35,12 +35,10 @@ handlers= net.java.sip.communicator.launcher.logging.FileHandler, java.util.logg
 ############################################################
 
 # default file output is in user's home directory.
-net.java.sip.communicator.launcher.logging.FileHandler.limit = 5000000
-net.java.sip.communicator.launcher.logging.FileHandler.count = 3
-net.java.sip.communicator.launcher.logging.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
-net.java.sip.communicator.launcher.logging.FileHandler.level = FINEST
-
-
+net.java.sip.communicator.util.FileHandler.limit = 5000000
+net.java.sip.communicator.util.FileHandler.count = 3
+net.java.sip.communicator.util.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
+net.java.sip.communicator.util.FileHandler.level = FINEST
 
 
 # Limit the message that are printed on the console to FINEST and above (all).
