--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -1,5 +1,5 @@
 ############################################################
-#  	Default Logging Configuration File
+#  Default Logging Configuration File
 #
 # You can use a different file by specifying a filename
 # with the java.util.logging.config.file system property.
@@ -7,7 +7,7 @@
 ############################################################
 
 ############################################################
-#  	Global properties
+#  Global properties
 ############################################################
 
 # "handlers" specifies a comma separated list of log Handler
@@ -15,7 +15,7 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the INFO and above levels.
-handlers= net.java.sip.communicator.launcher.logging.FileHandler, java.util.logging.ConsoleHandler
+handlers= net.java.sip.communicator.util.FileHandler, java.util.logging.ConsoleHandler
 
 
 # To also add the FileHandler, use the following line instead.
@@ -35,11 +35,10 @@ handlers= net.java.sip.communicator.launcher.logging.FileHandler, java.util.logg
 ############################################################
 
 # default file output is in user's home directory.
-net.java.sip.communicator.launcher.logging.FileHandler.limit = 5000000
-net.java.sip.communicator.launcher.logging.FileHandler.count = 1
-net.java.sip.communicator.launcher.logging.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
-net.java.sip.communicator.launcher.logging.FileHandler.level = INFO
-
+net.java.sip.communicator.util.FileHandler.limit = 5000000
+net.java.sip.communicator.util.FileHandler.count = 1
+net.java.sip.communicator.util.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
+net.java.sip.communicator.util.FileHandler.level = FINEST
 
 
 
