--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -41,7 +41,8 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.xml.sax.helpers; \
  javax.crypto; \
  javax.crypto.spec; \
- javax.crypto.interfaces;
+ javax.crypto.interfaces; \
+ net.java.sip.communicator.util.launchutils
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
  reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
@@ -68,7 +69,8 @@ felix.auto.start.42= \
  reference:file:sc-bundles/defaultresources.jar
 
 felix.auto.start.45= \
-reference:file:sc-bundles/ui-service.jar \
+ reference:file:sc-bundles/ui-service.jar \
+ reference:file:sc-bundles/argdelegation-service.jar \
  reference:file:sc-bundles/version.jar \
  reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/branding.jar
@@ -93,8 +95,8 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-dict.jar
 
 felix.auto.start.55= \
- reference:file:sc-bundles/meta-cl.jar 
- 
+ reference:file:sc-bundles/meta-cl.jar
+
 
 felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
@@ -130,14 +132,19 @@ felix.auto.start.67= \
  reference:file:sc-bundles/contactinfo.jar \
  reference:file:sc-bundles/accountinfo.jar \
  reference:file:sc-bundles/chatalerter.jar \
- reference:file:sc-bundles/shutdown.jar \
  reference:file:sc-bundles/autoaway.jar \
  reference:file:sc-bundles/keybindingChooser.jar \
  reference:file:sc-bundles/generalconfig.jar \
  reference:file:sc-bundles/dictaccregwizz.jar
 
 felix.auto.start.70= \
- reference:file:sc-bundles/simpleaccreg.jar 
+ reference:file:sc-bundles/simpleaccreg.jar
+
+felix.auto.start.75= \
+ reference:file:sc-bundles/argdelegation.jar
+
+felix.auto.start.80= \
+ reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
