--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -43,7 +43,7 @@ net.java.sip.communicator.util.FileHandler.level = FINEST
 
 
 # Limit the message that are printed on the console to FINEST and above (all).
-java.util.logging.ConsoleHandler.level = INFO
+java.util.logging.ConsoleHandler.level = WARNING
 java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
 
 
@@ -61,20 +61,7 @@ ymsg.network.level = INFO
 net.sf.cindy.impl.level = INFO
 
 # But we want everything coming from the sip-comm
-net.java.sip.communicator.impl.level = INFO
-net.java.sip.communicator.impl.protocol.level = INFO
-net.java.sip.communicator.impl.shutdown.level = INFO
-net.java.sip.communicator.impl.contactlist.level = INFO
-net.java.sip.communicator.slick.level = INFO
-net.java.sip.communicator.impl.level = INFO
-net.java.sip.communicator.service.level = INFO
-net.java.sip.communicator.util.level = INFO
-net.java.sip.communicator.service.configuration.level = INFO
-net.java.sip.communicator.impl.configuration.level = INFO
-net.java.sip.communicator.impl.history.level = INFO
-net.java.sip.communicator.impl.gui.level = INFO
-net.java.sip.communicator.impl.protocol.zeroconf.jmdns.level = WARNING
-net.java.sip.communicator.impl.media.level = WARNING
+net.java.sip.communicator.level = WARNING
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
