Adds the possibility to register for RSS feeds passed as invokation parameters Implements support for RSS feeds on sites with expired RSS certificates Implements support for the --debug parameter. Unless this parameter is set our new StdOut class would take control of all System.out traffic. Adds methods to PopupDIalog that now allow speficying an icon for generic dialog messages Fixes the whiteboard menu item never return null as it causes the UIService to slightly freak out.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4391 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -557,6 +557,9 @@
             <env key="PATH" path="${path}"/>
             <env key="DYLD_LIBRARY_PATH" path="${dyld.library.path}"/>
 
+            <!-- make sure that we automatically enable system.out when running
+                 SIP Communicator from Ant-->
+            <arg line="--debug"/>
             <!-- pass to SC args that have been specified by the user -->
             <arg line="${args}"/>
         </java>
