--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -42,8 +42,8 @@ net.java.sip.communicator.util.FileHandler.level = FINEST
 
 
 
-# Limit the message that are printed on the console to FINEST and above (all).
-java.util.logging.ConsoleHandler.level = WARNING
+# Note that the level for the console handler may be modified by the application.
+java.util.logging.ConsoleHandler.level = SEVERE
 java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
 
 
@@ -53,15 +53,16 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 ############################################################
 
 # We don't want trace logs from joscar and joustsim
-net.kano.level = INFO
+net.kano.level = SEVERE
 
-ymsg.network.level = INFO
+ymsg.network.level = SEVERE
 
 # We don't want trace logs from java-jml
-net.sf.cindy.impl.level = INFO
+net.sf.cindy.impl.level = SEVERE
 
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.level = WARNING
+net.java.sip.communicator.impl.protocol.rss.level = FINER
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
