Commits a patch from Sebastien Mazy that adds name and description for the log4j bundle.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4402 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1501,6 +1501,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/log4j-1.2.8.jar" prefix=""/>
             <manifest>
                 <attribute name="Export-Package" value="org.apache.log4j"/>
+                <attribute name="Bundle-Name" value="Apache log4j logging system"/>
+                <attribute name="Bundle-Description" value="Logging system."/>
             </manifest>
         </jar>
     </target>
