--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -5,6 +5,8 @@ net.java.sip.communicator.impl.gui.sendTypingNotifications=true
 net.java.sip.communicator.impl.gui.isMultiChatWindowEnabled=true
 net.java.sip.communicator.impl.gui.isMessageHistoryShown=true
 net.java.sip.communicator.impl.gui.messageHistorySize=10
+net.java.sip.communicator.impl.gui.isTransparentWindowEnabled=false
+net.java.sip.communicator.impl.gui.windowTransparency=180
 
 applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
