Provides the UI means for SIP Communicator to initiate a call-transfer.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4409 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -58,6 +58,7 @@ TEXT_UNDERLINED_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/textUnderlined
 DIAL_BUTTON=resources/images/impl/gui/buttons/dialButton.png
 HOLD_BUTTON=resources/images/impl/gui/buttons/holdButton.png
 MUTE_BUTTON=resources/images/impl/gui/buttons/muteButton.png
+TRANSFER_CALL_BUTTON=resources/images/impl/gui/buttons/transferCallButton.png
 INVITE_DIALOG_ICON=resources/images/impl/gui/common/inviteDialogIcon.png
 SEND_SMS_ICON=resources/images/impl/gui/common/gsm.png
 DIAL_BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
