--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -31,6 +31,7 @@
     <classpathentry kind="lib" path="lib/installer-exclude/smackx.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/smackx-jingle.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/Stun4J.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/transparency.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/ymsg_network_v0_63.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/linux/installer-exclude/jmf.jar"/>
     <classpathentry kind="lib" path="lib/os-specific/linux/jdic_stub.jar"/>
